syntax = "proto3";
option go_package = "/user";
message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

service UserService {
  rpc AddUser(User) returns (UserID);
  rpc GetUser(UserID) returns (User);
  rpc ListUsers(Empty) returns (UserList);
}

message UserID {
  int32 id = 1;
}

message Empty {}

message UserList {
  repeated User users = 1;
}
